<resources>
    <string name="app_name">AnimationsDemo</string>
    <string name="property_animation">Property Animation</string>
    <string name="in_progress_check_back_shortly">In Progress, Check Back Shortly</string>
    <string name="settings">Settings</string>
    <string name="alpha">Alpha</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="translate">Translate</string>
    <string name="simple_animation">Simple Animation</string>
    <string name="animation_set">Animation Set</string>
    <string name="flip_and_switch">Flip and Switch</string>
    <string name="spin_and_fade">Spin and Fade</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interpolation">"Interpolation"</string>
    <string name="drawable_animation">Drawable Animation</string>
</resources>
