<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/simple"
        android:title="@string/simple_animation">
        <menu>
            <item
                android:id="@+id/alpha"
                android:title="@string/alpha"
                app:showAsAction="never" />
            <item
                android:id="@+id/rotate"
                android:title="@string/rotate"
                app:showAsAction="never" />
            <item
                android:id="@+id/scale"
                android:title="@string/scale"
                app:showAsAction="never" />
            <item
                android:id="@+id/translate"
                android:title="@string/translate"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/set"
        android:title="@string/animation_set">
        <menu>
            <item
                android:id="@+id/flip_and_switch"
                android:title="@string/flip_and_switch"
                app:showAsAction="never" />
            <item
                android:id="@+id/spin_and_fade"
                android:title="@string/spin_and_fade"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>