<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/propertyAnimationFragment"
            android:icon="@drawable/ic_steering_wheel"
            android:title="@string/property_animation"/>
        <item
            android:id="@+id/interpolatorFragment"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/interpolation"/>
        <item
            android:id="@+id/drawableAnimationFragment"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/drawable_animation"/>
        <item
            android:id="@+id/dashboard4"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/property_animation"/>
        <item
            android:id="@+id/dashboard5"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/property_animation"/>
        <item
            android:id="@+id/dashboard6"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/property_animation"/>
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
</menu>